--- a/auth-protocols-backend/src/main/resources/application.yml
+++ b/auth-protocols-backend/src/main/resources/application.yml
@@ -1,1 +1,10 @@
+server:
+  port: 8081
 
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://auth-protocols-keycloak:8080/realms/auth-protocols
+          jwk-set-uri: http://auth-protocols-keycloak:8080/realms/auth-protocols/protocol/openid-connect/certs
