--- a/auth-protocols-frontend/package.json
+++ b/auth-protocols-frontend/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "history": "^5.3.0",
+    "oidc-client-ts": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-oidc-context": "^2.3.1",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
