Import keycloak realm configuration

--- a/auth-protocols-keycloak/docker-compose.yml
+++ b/auth-protocols-keycloak/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     ports:
       - '8080:8080'
     command:
-      - start-dev
+      - start-dev --import-realm
     depends_on:
       - postgres
+    volumes:
+      - "./keycloak:/opt/keycloak/data/import"
