--- a/auth-protocols-frontend/package.json
+++ b/auth-protocols-frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "axios": "^1.6.0",
     "history": "^5.3.0",
     "oidc-client-ts": "^2.3.0",
     "react": "^18.2.0",
