--- a/auth-protocols-frontend/package.json
+++ b/auth-protocols-frontend/package.json
@@ -19,6 +19,7 @@
     "oidc-client-ts": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.0",
     "react-oidc-context": "^2.3.1",
     "react-router-dom": "^6.17.0"
   },
