Dockerize frontend and fix configuration

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+VITE_API_URL=http://localhost
+VITE_OIDC_AUTHORITY=http://keycloak:8080/realms/auth-protocols-oidc
+VITE_OIDC_CLIENT_ID=auth-protocols-client-oidc
+VITE_OIDC_REDIRECT_URI=http://localhost
+VITE_OIDC_POST_LOGOUT_REDIRECT_URI=http://localhost
+
 KERBEROS_DB_PASS=password
 
 POSTGRES_VERSION=latest
