--- a/auth-protocols-frontend/.env
+++ b/auth-protocols-frontend/.env
@@ -1,5 +1,5 @@
 VITE_API_URL=http://localhost:5173
-VITE_OIDC_AUTHORITY=http://localhost:8080/realms/auth-protocols-oidc
+VITE_OIDC_AUTHORITY=http://keycloak:8080/realms/auth-protocols-oidc
 VITE_OIDC_CLIENT_ID=auth-protocols-client-oidc
 VITE_OIDC_REDIRECT_URI=http://localhost:5173
 VITE_OIDC_POST_LOGOUT_REDIRECT_URI=http://localhost:5173
