--- a/kerberos/config/krb5.conf
+++ b/kerberos/config/krb5.conf
@@ -13,8 +13,8 @@
 
 [realms]
  AUTH-PROTOCOLS.COM = {
-   kdc = kerberos.auth-protocols.com
-   admin_server = kerberos.auth-protocols.com
+   kdc = kerberos
+   admin_server = kerberos
  }
 
 [domain_realm]
