--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ VITE_OIDC_REDIRECT_URI=http://localhost
 VITE_OIDC_POST_LOGOUT_REDIRECT_URI=http://localhost
 
 KERBEROS_DB_PASS=password
+KERBEROS_SPN=HTTP/desktop-a194p2n@AUTH-PROTOCOLS.COM
 
 POSTGRES_VERSION=latest
 POSTGRES_DB=keycloak_db
