Build backend during image building

--- a/auth-protocols-backend/Dockerfile
+++ b/auth-protocols-backend/Dockerfile
@@ -1,14 +1,27 @@
-# Use the OpenJDK image with Java 21
+# Stage 1: Build the application
+FROM maven:3.9.5-amazoncorretto-21 as builder
+
+# Copy the source code
+COPY src /app/src
+COPY pom.xml /app
+
+# Set the working directory
+WORKDIR /app
+
+# Build the application
+RUN mvn clean package
+
+# Stage 2: Create the final image
 FROM openjdk:21-jdk-slim
 
 # Set a working directory inside the container
 WORKDIR /app
 
-# Add Kerberos configuration file
+# Copy Kerberos configuration file
 COPY src/main/resources/kerberos/krb5.conf /etc/krb5.conf
 
-# Copy the JAR file into the container
-COPY ./target/auth-protocols-backend-*.jar /app/app.jar
+# Copy the built JAR from the builder stage
+COPY --from=builder /app/target/auth-protocols-backend-*.jar /app/app.jar
 
 # Expose the port that your application uses
 EXPOSE 3000
